fix button product on mobile

--- a/corebiz-test/src/styles/product.css
+++ b/corebiz-test/src/styles/product.css
@@ -106,3 +106,9 @@
 .product-content:hover .buy-button {
     display: flex;
 }
+
+@media screen and (max-width: 1040px) {
+    .buy-button {
+        display: flex;
+    }
+}
